deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-dash
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-dash
  template:
    metadata:
      labels:
        app: dev-dash
    spec:
      containers:
      - name: dev-dash
        imagePullPolicy: IfNotPresent
        image: worrellkeiran/dev-dash:v0.0.4
        ports:
        - containerPort: 80
      volumeMounts:
      - mountPath: /mnt
        name: dash-config-volume
      imagePullSecrets:
      - name: regcred
    volumes:
      - configMap:
          name: dash-config
        name: dash-config-volume
