deployment/frontDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-dash-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-dash-front
  template:
    metadata:
      labels:
        app: dev-dash-front
    spec:
      containers:
      - name: dev-dash-front
        imagePullPolicy: IfNotPresent
        image: worrellkeiran/devdash:v0.0.27
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /mnt
          name: dash-config-volume
      imagePullSecrets:
      - name: regcred
      volumes:
        - configMap:
            name: dash-config
          name: dash-config-volume
