deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-dash-service
spec:
  type: NodePort
  selector:
    app: dev-dash-front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: dev-dash-back-service
spec:
  selector:
    app: dev-dash-back
  ports:
    - port: 80
      targetPort: 8000
