deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devdash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: devdash.local
      http:
        paths:
          - path: /(status)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-dash-back-service
                port:
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-dash-service
                port:
                  number: 80
